--- a/force-app/main/default/classes/DMLOperations.cls
+++ b/force-app/main/default/classes/DMLOperations.cls
@@ -48,8 +48,12 @@ public with sharing class DMLOperations {
      */
     public static void createAccount(String name, String industry) {
         // Create a new Account and set the fields inline
-
+        Account newAcct = new Account(
+            Name = name,
+            Industry = industry
+        );
         // Insert the Account
+        insert newAcct;
     }
 
     
