--- a/force-app/main/default/classes/DMLOperations.cls
+++ b/force-app/main/default/classes/DMLOperations.cls
@@ -86,11 +86,12 @@ public with sharing class DMLOperations {
      */
     public static void updateContactLastName(Id contactId, String newLastName) {
         // Retrieve the Contact from the database
-        // [SELECT Id FROM Contact WHERE Id = :contactId]
+        Contact contactLastName = [SELECT Id FROM Contact WHERE Id = :contactId];
 
         // Update the Contact's last name
-
+        contactLastName.LastName = newLastName;
         // Update the Contact in the database
+        update contactLastName;
     }
 
     /**
